Fix spacing

--- a/website/src/app/page.module.css
+++ b/website/src/app/page.module.css
@@ -27,6 +27,12 @@
     font-size: 1.5rem;
 }
 
+@media (max-width: 1019px) {
+    .Section2 .card:nth-of-type(1), .Section2 .card:nth-of-type(2) {
+        margin-bottom: 32px;
+    }
+}
+
 .Section3 {
     display: flex;
     flex-direction: column;
